Make 2024: Fix alignment of single post actions
See https://github.com/WordPress/wordpress.org/issues/363


git-svn-id: https://meta.svn.wordpress.org/sites/trunk@14082 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-breathe-2024/style.css
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-breathe-2024/style.css
@@ -978,6 +978,10 @@ article.page .o2-post {
 	border-top: none;
 }
 
+.single-post article.post .entry-meta {
+	margin-top: unset;
+}
+
 .o2-post-comments .o2-comment .comment-content {
 	margin-left: 45px;
 }
